# nono

./: .dockerignore  CHANGELOG.md  Cargo.toml  README.md  package-hosting.md  test-multi-subject.md
.github/workflows/: ci.yml  image-build.yml  release.yml  sign-instruction-files.yml
bindings/c/: Cargo.toml
bindings/c/src/: lib.rs
crates/nono/: Cargo.toml
crates/nono-cli/: Cargo.toml  README.md
crates/nono-cli/data/: network-policy.json  nono-profile.schema.json  policy.json  profile-authoring-guide.md
crates/nono-cli/src/: capability_ext.rs  cli.rs  cli_bootstrap.rs  deprecated_schema.rs  exec_strategy.rs  execution_runtime.rs  hooks.rs  launch_runtime.rs  learn.rs  learn_runtime.rs  main.rs  network_policy.rs  output.rs  package_cmd.rs  policy.rs  policy_cmd.rs  profile_cmd.rs  profile_runtime.rs  protected_paths.rs  proxy_runtime.rs  pty_proxy.rs  query_ext.rs  registry_client.rs  rollback_commands.rs  rollback_runtime.rs  sandbox_prepare.rs  session.rs  session_commands.rs  setup.rs  startup_runtime.rs  supervised_runtime.rs  test_env.rs  trust_cmd.rs  trust_keystore.rs  trust_scan.rs
crates/nono-cli/tests/: deny_overlap_run.rs
crates/nono-proxy/: Cargo.toml  README.md
crates/nono-proxy/src/: config.rs  connect.rs  credential.rs  external.rs  filter.rs  reverse.rs  route.rs  server.rs
crates/nono/schema/: capability-manifest.schema.json
crates/nono/src/: capability.rs  diagnostic.rs  error.rs  keystore.rs  lib.rs  net_filter.rs  path.rs  query.rs
crates/nono/src/sandbox/: linux.rs  macos.rs  mod.rs
crates/nono/src/trust/: types.rs
crates/nono/tests/: capability_manifest_schema.rs
docker/: Dockerfile
docs/: docs.json
docs/cli/clients/: claude-code.mdx  opencode.mdx
docs/cli/features/: credential-injection.mdx  learn.mdx  secrets.mdx  (+4 more)
scripts/: prepare-release.sh
tests/: run_integration_tests.sh
tests/integration/: test_audit.sh  test_client_startup.sh  test_shell.sh
(+8 files in other folders)
